@@ -1,0 +1,88 @@
+/*
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ *
+ * Copyright (c) 2013 Oracle and/or its affiliates. All rights reserved.
+ *
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License.  You can
+ * obtain a copy of the License at
+ * http://glassfish.java.net/public/CDDL+GPL_1_1.html
+ * or packager/legal/LICENSE.txt.  See the License for the specific
+ * language governing permissions and limitations under the License.
+ *
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at packager/legal/LICENSE.txt.
+ *
+ * GPL Classpath Exception:
+ * Oracle designates this particular file as subject to the "Classpath"
+ * exception as provided by Oracle in the GPL Version 2 section of the License
+ * file that accompanied this code.
+ *
+ * Modifications:
+ * If applicable, add the following below the License Header, with the fields
+ * enclosed by brackets [] replaced by your own identifying information:
+ * "Portions Copyright [year] [name of copyright owner]"
+ *
+ * Contributor(s):
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
+package com.sun.jersey.impl.wadl;
+
+import javax.ws.rs.GET;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.Context;
+
+import com.sun.jersey.api.client.ClientResponse;
+import com.sun.jersey.api.client.WebResource;
+import com.sun.jersey.api.core.DefaultResourceConfig;
+import com.sun.jersey.api.core.ResourceConfig;
+import com.sun.jersey.impl.AbstractResourceTester;
+import com.sun.jersey.server.wadl.WadlApplicationContext;
+
+/**
+ * @author Michal Gajdos (michal.gajdos at oracle.com)
+ */
+public class WadlApplicationContextTest extends AbstractResourceTester {
+
+    public WadlApplicationContextTest(final String testName) {
+        super(testName);
+    }
+
+    @Path("/")
+    public static class WadlApplicationContextResource {
+
+        @Context
+        private WadlApplicationContext wadlApplicationContext;
+
+        @GET
+        @Produces("text/plain")
+        public String wadlApplicationContextSet() {
+            return wadlApplicationContext != null ? "ok" : "ko";
+        }
+    }
+
+    public void testNullInjectedWhenDisabledWadl() throws Exception {
+        final ResourceConfig resourceConfig = new DefaultResourceConfig(WadlApplicationContextResource.class);
+        resourceConfig.getFeatures().put(ResourceConfig.FEATURE_DISABLE_WADL, true);
+
+        initiateWebApplication(resourceConfig);
+
+        final WebResource resource = resource("/", false);
+        final ClientResponse clientResponse = resource.get(ClientResponse.class);
+
+        assertEquals(200, clientResponse.getStatus());
+        assertEquals("ko", clientResponse.getEntity(String.class));
+    }
+}
